<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".ui.LoginActivity">

    <RelativeLayout
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/bg_logo"
        android:layout_marginTop="20dp"
        >

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_centerInParent="true"
            android:src="@drawable/logo_belanja" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/masuk_sebgai_staf"
        android:fontFamily="@font/poppin_semibold"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGaris"
        android:layout_marginTop="40dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/black"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="14dp"
        android:fontFamily="@font/poppin_semibold"
        android:textSize="14sp"
        android:layout_gravity="start"
        android:layout_marginTop="30dp"
        />
    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@drawable/bg_edittext"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="5dp"
        android:hint="@string/masukkan_username"
        android:textSize="14sp"
        android:fontFamily="@font/poppin_regular"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="14dp"
        android:fontFamily="@font/poppin_semibold"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_gravity="start"
        android:layout_marginTop="18dp"
        />
    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@drawable/bg_edittext"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="5dp"
        android:hint="@string/masukkan_kata_sandi"
        android:textSize="14sp"
        android:fontFamily="@font/poppin_regular"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingat_saya"
        android:fontFamily="@font/poppin_regular"
        android:textSize="14sp"
        android:layout_gravity="start"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnMasuk"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="39dp"
        android:background="@drawable/bg_button"
        android:text="@string/masuk"
        android:textAllCaps="false"
        android:fontFamily="@font/poppin_semibold"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginBottom="20dp"
        />

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        />

</LinearLayout>